função limpar() implementada

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <section class="carrinho__produtos" id="lista-produtos">
         <section class="carrinho__produtos__produto">
-          <span class="texto-azul">1x</span> Celular <span class="texto-azul">R$0</span>
+          <span class="texto-azul"></span> Carrinho vazio... <span class="texto-azul"></span>
         </section>
       </section>
 
