--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
-  <title>Carrinho de compras</title>
+  <link rel="shortcut icon" href="./assets/icone-carrinho.svg" type="image/x-icon">
+  <title>Carrinho de Compras</title>
 </head>
 
 <body>
