mudança no padding da página

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="carrinho__total">
           Total: <span class="texto-azul" id="valor-total">R$0</span>
         </p>
-        <button onclick="limpar()" type="button" class="botao-form botao-limpar">Limpar</button>
+        <button onclick="limpar()" type="button" class="botao-form botao-limpar botao-limpar-maxwidth">Limpar</button>
       </div>
     </section>
   </main>
